# legislative-acts-analyzer

./: .gitignore
backend/: .env.example  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: documents.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: __init__.py  database.py  models.py  repository.py
backend/app/models/: schemas.py
backend/app/services/: chunking_service.py  document_processor.py  extraction_service.py  openai_service.py
backend/app/utils/: text_processing.py
backend/data/acts/: 2025-2026-PLENARIO-SESION-44 .docx
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
