[project]
name = "legislative-acts-analyzer"
version = "1.0.0"
description = "Intelligent analysis of legislative acts using Gen AI"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "tiktoken>=0.12.0",
    "openai>=2.5.0",
    "docling>=2.57.0",
    "structlog>=25.4.0",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]  
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
